k8s/caller-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: caller-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: callerinfo
spec:
  hosts:
    - "*"
  gateways:
    - caller-gateway
  http:
    - match:
        - uri:
            exact: /caller/test
      route:
        - destination:
            host: caller-application
            port:
              number: 8081
